<resources>
    <string name="app_name">ClueWin</string>
    <string name="no_plys_text">Number of Players \n(including yourself): </string>
    <string name="back_butt">Back</string>
    <string name="next_butt">Next</string>
    <string name="higher">More</string>
    <string name="lower">Less</string>
    <string name="max_players">6</string>
    <string name="me_text">Me</string>
    <string name="card_text">No. Cards</string>
    <string name="order_text">Order no.</string>
    <string name="init_player_title">Player No.%d</string>
    <string name="play_name_hint">Enter Player\'s Name.</string>

    <string-array name="classic_cards">
        <item>People</item>
        <item>Colonel Mustard</item>
        <item>Miss Scarlet</item>
        <item>Mr. Green</item>
        <item>Mrs. Peacock</item>
        <item>Mrs. White</item>
        <item>Professor Plum</item>

        <item>Weapons</item>
        <item>Candlestick</item>
        <item>Wrench</item>
        <item>Rope</item>
        <item>Revolver</item>
        <item>Knife</item>
        <item>Lead Pipe</item>

        <item>Rooms</item>
        <item>Billiard Room</item>
        <item>Study</item>
        <item>Hall</item>
        <item>Lounge</item>
        <item>Dining Room</item>
        <item>Ballroom</item>
        <item>Conservatory</item>
        <item>Library</item>
        <item>Kitchen</item>
    </string-array>



</resources>
