<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


  <TextView
      android:id="@+id/no_plys_text"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:text="@string/no_plys_text"
      android:layout_weight = "1"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintBottom_toTopOf="@id/plys_select"
      android:gravity="center"/>


  <LinearLayout
      android:id = "@+id/plys_select"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight = "1"
      android:orientation="horizontal"
      app:layout_constraintTop_toBottomOf="@+id/no_plys_text"
      app:layout_constraintBottom_toTopOf="@+id/next_button"
      >

    <Button
        android:id="@+id/lower_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/lower"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
          android:id="@+id/no_plys"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:text="@string/max_players"
          android:layout_weight = "2"
          android:gravity="center"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintRight_toLeftOf="@id/higher_button"
          app:layout_constraintLeft_toRightOf="@id/lower_button"
          />

      <Button
          android:id="@+id/higher_button"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight = "1"
          android:text="@string/higher"
          app:layout_constraintRight_toRightOf="parent"
      />

  </LinearLayout>

  <Button
      android:id="@+id/next_button"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight = "5"
      android:text="@string/next_butt"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@id/plys_select"
      app:layout_constraintLeft_toLeftOf="parent"
      />


</android.support.constraint.ConstraintLayout>