<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/play_name_hint"
        android:textAlignment="center"
        android:inputType="text"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintTop_toBottomOf="@id/title_tv"/>


    <EditText
        android:id="@+id/play_cards_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="5"
        android:inputType="number"
        android:textAlignment="center"
        android:hint="@string/card_text"
        app:layout_constraintTop_toBottomOf="@id/name_et" />


    <EditText
        android:id="@+id/play_order_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_weight="5"
        android:hint="@string/order_text"
        app:layout_constraintTop_toBottomOf="@id/play_cards_et" />



    <LinearLayout
        android:id="@+id/play_butts_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/play_order_et">

        <Button
            android:id="@+id/play_back_butt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_weight = "1"
            android:text="@string/back_butt"
            app:layout_constraintLeft_toLeftOf ="parent" />

        <Button
            android:id="@+id/play_next_butt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "3"
            android:text="@string/next_butt"
            app:layout_constraintRight_toRightOf ="parent" />

    </LinearLayout>




</android.support.constraint.ConstraintLayout>